[gd_scene load_steps=7 format=2]

[ext_resource path="res://png/man.png" type="Texture" id=1]
[ext_resource path="res://scn/Customer.gd" type="Script" id=2]
[ext_resource path="res://png/bubble.svg" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16.9429, 30.4995 )

[sub_resource type="Animation" id=2]

resource_name = "FadeIn"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Customer" type="Sprite"]

modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.622881, 0.611197 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Pause", "Visibility" ]

[node name="BubbleSprite" type="Sprite" parent="." index="0"]

position = Vector2( -7.96507, -157.933 )
texture = ExtResource( 3 )

[node name="BeerArea" type="Area2D" parent="." index="1"]

position = Vector2( 0, -73.6261 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeerArea" index="0"]

position = Vector2( 0, -1.63619 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[connection signal="body_entered" from="BeerArea" to="." method="_on_BeerArea_body_entered"]

[connection signal="body_exited" from="BeerArea" to="." method="_on_BeerArea_body_exited"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


